<resources>
    <string name="app_name">Dazhongdianping</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homepage">首页</string>
    <string name="group">闪惠团购</string>
    <string name="find">发现</string>
    <string name="me">我的</string>
    <string name="comment">写点评</string>
    <string name="store">添加商户</string>
    <string name="scan">扫一扫</string>
    <string name="pay">付款码</string>
</resources>
