<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="150dp"
    android:layout_height="180dp">
    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="45dp">
        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/home_navibar_tips_icon_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/comment"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="45dp">
        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/home_navibar_tips_icon_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/store"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="45dp">
        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/home_navibar_tips_icon_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/scan"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="45dp">
        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/home_add_icon_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/pay"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>